# TutUni

./: .gitignore  README.md  docker-compose.yml  init-db.sql  next.config.js  package-lock.json  package.json  public  test-auth-flow.ps1  test-endpoints.ps1
.cursor/rules/: fastapi-python-cursor-rules.mdc
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/(auth)/login/: page.tsx
app/(auth)/register/: page.tsx
app/api/auth/login/: route.ts
app/api/projects/: route.ts
app/dashboard/: page.tsx
app/notifications/: page.tsx
app/projects/[id]/: page.tsx
app/projects/new/: new-project-form.tsx  page.tsx
backend/: main.py  pyproject.toml  requirements.txt
backend/app/core/: config.py  database.py
backend/app/models/: chat.py  document.py  project.py  user.py
backend/app/routers/: analysis.py  auth.py  auth.py.backup  chat.py  documents.py  projects.py
backend/app/schemas/: auth.py  chat.py  document.py  project.py
backend/app/services/: ai_providers.py  ai_service.py  auth_service.py  background_processor.py  background_worker.py  document_processor.py  text_chunker.py  vector_service.py
components/: providers.tsx
components/analysis/: analysis-display.tsx
components/chat/: chat-interface.tsx
components/dashboard/: dashboard-header.tsx  dashboard-stats.tsx  notifications-dropdown.tsx  projects-list.tsx  quick-actions.tsx  user-dropdown.tsx
components/documents/: document-upload.tsx  documents-list.tsx
components/ui/: badge.tsx  progress.tsx  skeleton.tsx  tabs.tsx
lib/: auth.ts  utils.ts
lib/utils/: password.ts
lib/validations/: auth.ts
types/: next-auth.d.ts
(+12 files in other folders)
